5 February 2018: Wouter
	- Fix #3451: dnstap not building when you have a separate build dir.
	  And removed protoc warning, set dnstap.proto syntax to proto2.

2 February 2018: Wouter
	- Fix unfreed locks in log and arc4random at exit of unbound.
	- unit test with valgrind
	- Fix lock race condition in dns cache dname synthesis.
	- lock subnet new item before insertion to please checklocks,
	  no modification of critical regions outside of lock region.

1 February 2018: Wouter
	- fix unaligned structure making a false positive in checklock
	  unitialised memory.

29 January 2018: Ralph
	- Use NSEC with longest ce to prove wildcard absence.
	- Only use *.ce to prove wildcard absence, no longer names.

25 January 2018: Wouter
	- ltrace.conf file for libunbound in contrib.

23 January 2018: Wouter
	- Fix that unbound-checkconf -f flag works with auto-trust-anchor-file
	  for startup scripts to get the full pathname(s) of anchor file(s).
	- Print fatal errors about remote control setup before log init,
	  so that it is printed to console.

22 January 2018: Wouter
	- Accept tls-upstream in unbound.conf, the ssl-upstream keyword is
	  also recognized and means the same.  Also for tls-port,
	  tls-service-key, tls-service-pem, stub-tls-upstream and
	  forward-tls-upstream.
	- Fix #3397: Fix that cachedb could return a partial CNAME chain.
	- Fix #3397: Fix that when the cache contains an unsigned DNAME in
	  the middle of a cname chain, a result without the DNAME could
	  be returned.

19 January 2018: Wouter
	- tag 1.6.8 for release with CVE fix.
	- trunk has 1.6.9 with fix and previous commits.
	- patch for CVE-2017-15105: vulnerability in the processing of
	  wildcard synthesized NSEC records.
	- iana port update.
	- make depend: code dependencies updated in Makefile.

4 January 2018: Ralph
	- Copy query and correctly set flags on REFUSED answers when cache
	  snooping is not allowed.

3 January 2018: Ralph
	- Fix queries being leaked above stub when refetching glue.
