@@ -1,6 +1,9 @@
 5 February 2018: Wouter
 	- Fix #3451: dnstap not building when you have a separate build dir.
 	  And removed protoc warning, set dnstap.proto syntax to proto2.
+	- auth-zone provides a way to configure RFC7706 from unbound.conf,
+	  eg. with auth-zone: name: "." for-downstream: no for-upstream: yes
+	  fallback-enabled: yes and masters or a zonefile with data.
 
 2 February 2018: Wouter
 	- Fix unfreed locks in log and arc4random at exit of unbound.
